--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 * {
-  /* border: 2pt solid pink; */
   color: #F7867E;
   font-family: 'Space Grotesk', sans-serif;
 }
@@ -82,6 +81,15 @@ section {
   height: 60vh;
   background-color: #F7867E;
   opacity: 70%;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wins {
+  font-size: 70pt;
+  opacity: 100%;
 }
 
 p,
@@ -90,4 +98,8 @@ h1 {
   background-color: #F7867E;
   opacity: 80%;
   padding: 1px 10px 1px 10px;
+}
+
+h1 {
+  font-size: 20pt;
 }
