--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,29 @@
   font-family: 'Space Grotesk', sans-serif;
 }
 
+body {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  background: url(https://images.pexels.com/photos/1407305/pexels-photo-1407305.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+}
+
+h1 {
+  font-size: 20pt;
+}
+
 html {
   height: 100%;
   width: 100%;
 }
 
-body {
-  height: 100%;
-  width: 100%;
-  display:flex;
-  justify-content: space-evenly;
-  background: url(https://images.pexels.com/photos/1407305/pexels-photo-1407305.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+p,
+h1 {
+  color: black;
+  background-color: #F7867E;
+  opacity: 80%;
+  padding: 1px 10px 1px 10px;
 }
 
 section {
@@ -22,36 +34,7 @@ section {
   align-items: center;
 }
 
-.center {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.players {
-  width: 25vw;
-  flex-direction: column;
-}
-
-.gameboard{
-  display:flex;
-  justify-content: center;
-  width: 50vw;
-  height: 75vh;
-  border-radius: 10px;
-  align-items: center;
-  background-color: #037B99;
-  opacity: 90%;
-}
-
-.grid {
-  width: 40vw;
-  height: 60vh;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-}
-
+/* GameBoard */
 .box {
   border-color: #533A7B;
   font-size: 35pt;
@@ -76,6 +59,32 @@ section {
   border-left-style: groove;
 }
 
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.gameboard {
+  display: flex;
+  justify-content: center;
+  width: 50vw;
+  height: 75vh;
+  border-radius: 10px;
+  align-items: center;
+  background-color: #037B99;
+  opacity: 90%;
+}
+
+.grid {
+  width: 40vw;
+  height: 60vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+
+/* Player Columns */
 .display-wins {
   width: 20vw;
   height: 60vh;
@@ -87,19 +96,13 @@ section {
   align-items: center;
 }
 
-.wins {
+.players {
+  width: 25vw;
+  flex-direction: column;
+}
+
+.one-wins,
+.two-wins {
   font-size: 70pt;
   opacity: 100%;
-}
-
-p,
-h1 {
-  color: black;
-  background-color: #F7867E;
-  opacity: 80%;
-  padding: 1px 10px 1px 10px;
-}
-
-h1 {
-  font-size: 20pt;
 }
