Adjust flex box layout to include new wrapper for main page

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,6 @@
 }
 
 body {
-  display: flex;
-  justify-content: space-evenly;
   background: url(https://images.pexels.com/photos/1407305/pexels-photo-1407305.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 }
 
@@ -110,6 +108,11 @@ section {
 }
 
 /* ~~~~~~GAMEBOARD HEADING~~~~~~ */
+.game-page {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .gameplay-display {
   font-size: 20pt;
   display: flex;
